--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-APP_NAME=Laravel
+APP_NAME="Drug Tracker API"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_PORT=8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=database
+DB_PORT=3306
+DB_DATABASE=drug_tracker
+DB_USERNAME=drug_tracker
+DB_PASSWORD=secret
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -37,13 +38,13 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -55,6 +56,21 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+RXNORM_API_URL=https://rxnav.nlm.nih.gov/REST/
+RXNORM_API_TIMEOUT=10
+RXNORM_CACHE_TTL=86400
+RXNORM_RETRY_ATTEMPTS=3
+RXNORM_RETRY_DELAY_MS=200
+RXNORM_RETRY_BACKOFF=2
+RXNORM_CIRCUIT_FAILURE_THRESHOLD=5
+RXNORM_CIRCUIT_COOLDOWN=60
+
+RATE_LIMIT_PUBLIC=60
+RATE_LIMIT_AUTHENTICATED=120
+
+SANCTUM_STATEFUL_DOMAINS=localhost
+SESSION_DOMAIN=localhost
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
