--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,19 +11,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
-    environment:
-      APP_ENV: local
-      APP_DEBUG: "true"
-      APP_URL: http://localhost:8000
-      DB_CONNECTION: mysql
-      DB_HOST: database
-      DB_PORT: 3306
-      DB_DATABASE: drug_tracker
-      DB_USERNAME: drug_tracker
-      DB_PASSWORD: secret
-      CACHE_STORE: redis
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
+    env_file:
+      - .env
     ports:
       - "8000:8000"
     command: php -S 0.0.0.0:8000 -t public
@@ -33,17 +22,17 @@ services:
     container_name: drug-tracker-db
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: drug_tracker
-      MYSQL_USER: drug_tracker
-      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-secret}
+      MYSQL_DATABASE: ${DB_DATABASE:-drug_tracker}
+      MYSQL_USER: ${DB_USERNAME:-drug_tracker}
+      MYSQL_PASSWORD: ${DB_PASSWORD:-secret}
     ports:
-      - "3306:3306"
+      - "3307:3306"  # External port 3307 to avoid conflicts
     volumes:
       - mysql_data:/var/lib/mysql
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_PASSWORD:-secret}"]
       interval: 5s
       timeout: 5s
       retries: 10
@@ -53,7 +42,7 @@ services:
     container_name: drug-tracker-redis
     restart: unless-stopped
     ports:
-      - "6379:6379"
+      - "6380:6379"  # External port 6380 to avoid conflicts
     volumes:
       - redis_data:/data
 
